reports/dist/run-full-bench-20260609-085346/gateway-api-envoy-gateway-grpcroute/artifacts/manifests/gatewayclasses.yaml
apiVersion: v1
items:
- apiVersion: gateway.networking.k8s.io/v1
  kind: GatewayClass
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"gateway.networking.k8s.io/v1","kind":"GatewayClass","metadata":{"annotations":{},"name":"envoy"},"spec":{"controllerName":"gateway.envoyproxy.io/gatewayclass-controller"}}
    creationTimestamp: "2026-06-09T13:33:46Z"
    finalizers:
    - gateway-exists-finalizer.gateway.networking.k8s.io
    generation: 1
    name: envoy
    resourceVersion: "691"
    uid: a6e567d5-4eb3-4324-a6b7-f0131fd23cfa
  spec:
    controllerName: gateway.envoyproxy.io/gatewayclass-controller
  status:
    conditions:
    - lastTransitionTime: "2026-06-09T13:33:46Z"
      message: Valid GatewayClass
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
kind: List
metadata:
  resourceVersion: ""
