reports/dist/run-full-bench-20260609-085346/gateway-api-envoy-gateway-grpcroute/artifacts/manifests/grpcroutes.yaml
apiVersion: v1
items:
- apiVersion: gateway.networking.k8s.io/v1
  kind: GRPCRoute
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"gateway.networking.k8s.io/v1","kind":"GRPCRoute","metadata":{"annotations":{},"name":"sample-grpc-route","namespace":"sample"},"spec":{"hostnames":["grpc-backend.sample.svc.cluster.local"],"parentRefs":[{"name":"sample-gw","sectionName":"http"}],"rules":[{"backendRefs":[{"name":"grpc-backend","port":9000}]}]}}
    creationTimestamp: "2026-06-09T13:33:46Z"
    generation: 1
    name: sample-grpc-route
    namespace: sample
    resourceVersion: "692"
    uid: ea3f1e76-2afa-468c-9403-b29e82f589db
  spec:
    hostnames:
    - grpc-backend.sample.svc.cluster.local
    parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: sample-gw
      sectionName: http
    rules:
    - backendRefs:
      - group: ""
        kind: Service
        name: grpc-backend
        port: 9000
        weight: 1
  status:
    parents:
    - conditions:
      - lastTransitionTime: "2026-06-09T13:33:46Z"
        message: Route is accepted
        observedGeneration: 1
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: "2026-06-09T13:33:46Z"
        message: Resolved all the Object references for the Route
        observedGeneration: 1
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      controllerName: gateway.envoyproxy.io/gatewayclass-controller
      parentRef:
        group: gateway.networking.k8s.io
        kind: Gateway
        name: sample-gw
        sectionName: http
kind: List
metadata:
  resourceVersion: ""
